[project]
name = "plaited-python"
version = "0.1.0"
description = "Root Python tooling surface for local scripts and adapters."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.13.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["scripts/tests", "src/adapters/tests"]
