[project]
name = "plaited-native-model-training"
version = "0.1.0"
description = "Dedicated uv-managed Python environment for Plaited native-model training."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "numpy>=2.3.0,<3",
  "pytest>=8.4.2,<9",
  "pyyaml>=6.0.2,<7",
  "ruff>=0.13.1,<0.14",
]
mlx = [
  "mlx==0.31.1",
  "mlx-lm==0.31.1",
]

[tool.uv]
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
